HomePage and MatchPage year selector

--- a/front-end/src/components/pages/TeamPage.scss
+++ b/front-end/src/components/pages/TeamPage.scss
@@ -8,11 +8,11 @@
   .team-name-section {
     grid-column: span 3;
     justify-self: start;
-    align-self: end;
+    align-self: center;
   }
 
   .team-name {
-    font-size: 4rem;
+    font-size: 6rem;
     margin-bottom: 20px;
   }
 
